# indexify-extractors

./: .gitattributes  .gitignore  Makefile  README.md  config.yaml  extractors.json  pyproject.toml
.github/workflows/: detect-extractors.yml  publish-all-extractors.yml  publish-extractor.yml  publish-text-splitter.yml  publish_to_pypi.yml  sync-indexify-extractor-github-repo-to-s3.yml  test-extractor-sdk.yml
advanced-invoice-extractor/: README.md  advanced_invoice_parser.py  indexify.yaml
audio/: README.md
audio/asrdiarization/: README.md  asr_extractor.py  diarization_utils.py  requirements.txt
audio/faster_whisper/: README.md  fasterwhisper.py  requirements.txt
audio/fasterwhisper/: README.md  fasterwhisper.py  requirements.txt
audio/groq/: whisper.py
audio/whisper-asr/: requirements.txt  whisper_extractor.py
audio/whisper-diarization/: .gitignore  README.md  Untitled.ipynb  requirements.cpu.txt  requirements.txt  whisper_diarization.py
audio/whisper-mlx/: README.md  whisper_extractor.py
audio/whisper.cc/: main  requirements.txt  whisper.cc.py
audio/whisper_diarization/: helpers.py
dockerfiles/: Dockerfile.extractor  entrypoint.sh
embedding/: README.md
embedding-extractors/colbert/: colbertv2.py  indexify.yaml
embedding-extractors/e5_embedding/: e5_small_v2.py
embedding-extractors/flag_embedding/: README.md  bge_base.py
embedding-extractors/hash-embedding/: README.md  identity_hash_embedding.py
embedding-extractors/jina_base_en/: jina_base_en.py
embedding-extractors/minilm-l6/: README.md  minilm_l6_embedding.py
embedding-extractors/openai-embedding/: openai_embedding.py
embedding/arctic/: README.md  arctic.py
embedding/clip/: openai_clip_extractor.py  requirements.txt
embedding/clip_embedding/: README.md  openai_clip_extractor.py  requirements.txt
embedding/colbert/: colbertv2.py
embedding/e5_embedding/: e5_small_v2.py  requirements.txt
embedding/flag_embedding/: bge_base.py
embedding/hash-embedding/: identity_hash_embedding.py
embedding/jina_base_en/: jina_base_en.py
embedding/minilm-l6/: minilm_l6.py  minilm_l6_embedding.py  pyproject.toml
embedding/mpnet/: mpnet_base_v2.py  requirements.txt
embedding/openai-embedding/: openai_embedding.py  requirements.txt
embedding/scibert/: scibert_uncased.py
extractor-sdk/: .gitignore  README.md  config.yaml  pyproject.toml
extractor-sdk/indexify_extractor_sdk/: __init__.py  agent.py  base_extractor.py  content_downloader.py  coordinator_service_pb2.py  coordinator_service_pb2.pyi  coordinator_service_pb2_grpc.py  decorator.py  downloader.py  exceptions.py  extractor_worker.py  indexify_extractor.py  ingestion_api_models.py  list_extractors.py  logging_config.py  main.py  mock_extractor.py  module_loader.py  packager.py  packager_utils.py  server.py  task_store.py  utils.py  version.py
extractor-sdk/indexify_extractor_sdk/dockerfiles/: Dockerfile.extractor
extractor-sdk/indexify_extractor_sdk/embedding/: base_embedding.py  sentence_transformer.py
extractor-sdk/indexify_extractor_sdk/test/: test_agent.py
extractor-sdk/tests/: test_agent.py  test_feature_schema.py  test_import_extractors.py  test_mock_extractor.py  test_upload_extracted_content.py
extractor-sdk/tests/__snapshots__/: test_extractor_packager.ambr
image/: README.md
image/sam/: README.md  (+1 more)
indexify_extractor_sdk/: __init__.py  __main__.py  agent.py  base_extractor.py  content_downloader.py  coordinator_service_pb2.py  coordinator_service_pb2.pyi  coordinator_service_pb2_grpc.py  extractor_agent.py  extractor_packager.py  extractor_packager_utils.py  extractor_worker.py  indexify_api_objects.py  indexify_extractor.py  ingestion_api_models.py  ingestion_api_moodels.py  main.py  mock_extractor.py  packager.py  packager_utils.py  server.py
indexify_text_splitter/: cargo.toml
invoice-extractor/: README.md  simple_invoice_parser.py
invoices/: README.md
pdf/: README.md
tests/: test_extractor_packager.py  test_extractor_worker.py  test_mock_extractor.py
text/: README.md
text-lid/: README.md
text_splitters/: Cargo.toml  pyproject.toml
text_splitters/python/tests/: test_all.py
text_splitters/src/: lib.rs
video/: README.md
whisper-asr/: whisper_extractor.py
(+146 files in other folders)
