[tool.poetry]
name = "indexify-extractor-sdk"
version = "0.0.59"
description = "Indexify Extractor SDK to build new extractors for extraction from unstructured data"
authors = ["Diptanu Gon Choudhury <diptanu@tensorlake.ai>"]
readme = "README.md"

[tool.poetry.scripts]
indexify-extractor = "indexify_extractor_sdk.main:typer_app"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
pydantic = "^2.6.1"
fastapi = "^0.109.2"
nanoid = "^2.0.0"
grpcio = "^1.60.1"
uvicorn = "^0.27.0.post1"
protobuf = "^4.25.2"
boto3 = "^1.34.37"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
google-cloud-storage = "^2.14.0"
docker = "^7.0.0"
jinja2 = "^3.1.3"
httpx = "^0.26.0"
netifaces2 = "0.0.21"
websockets = "^12.0"
genson = "^1.2.2"
rich = "^13.7.1"
fsspec = "^2024.2.0"
indexify_text_splitter = "^0.1.1"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
syrupy = "^4.0.0"
pytest = ">7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
