[package]
name = "indexify_text_splitter"
version = "0.1.4"
edition = "2021"
description = "A text splitter module for Python, implemented in Rust using PyO3."

[lib]
name = "indexify_text_splitter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module"] }
regex = "1.5"

[dev-dependencies]
maturin = "1.5.1"
