[package]
name = "indexify_text_splitters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "indexify_text_splitters"
crate-type = ["cdylib"]


[dependencies]
maturin = "1.5.1"
pyo3 = "0.21.2"
regex = "1.5"
